--- a/desafios/d010/siteCorreto/estilo.css
+++ b/desafios/d010/siteCorreto/estilo.css
@@ -23,6 +23,7 @@ div {
     margin-top: 5px;
     padding: 20px;
     border-radius: 10px;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.384);
 }
 
 input {
