--- a/desafios/d012/pessoal/style.css
+++ b/desafios/d012/pessoal/style.css
@@ -61,7 +61,7 @@ div#p1 {
 }
 
 div#p2 {
-    background-image: url(imagens/background001.jpg);
+    background-image: url(../imagens/background001.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-color: black;
@@ -76,7 +76,7 @@ div#p3 {
 }
 
 div#p4 {
-    background-image: url(imagens/background002.jpg);
+    background-image: url(../imagens/background002.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-color: black;
